--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,70 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(1, 1, 29);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.app,
+.popup-wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn {
+  width: 30%;
+  height: 10%;
+  border-radius: 15px;
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  font-size: 1.5em;
+  cursor: pointer;
+  font-weight: 700;
+  box-shadow: 5px 2px 3px rgba(255, 255, 255, 0.2);
+}
+.btn:hover {
+  background-color: rgba(255, 255, 255, 1);
+  color: rgb(1, 1, 29);
+}
+
+.popup-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.popup-container {
+  width: 50%;
+  height: 50%;
+  background-color: rgb(249, 190, 190);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  color: rgb(1, 1, 29);
+  border-color: rgb(1, 1, 29);
+  box-shadow: 5px 2px 8px rgba(255, 255, 255, 0.4);
+}
+.popup-btn {
+  color: rgb(1, 1, 29);
+  border-color: rgb(1, 1, 29);
+  box-shadow: 5px 2px 8px rgba(1, 1, 29, 0.2);
+}
+.popup-btn:hover {
+  border-color: white;
+  box-shadow: 5px 2px 8px rgba(1, 1, 29, 0.8);
+}
+h3 {
+  font-size: 2em;
 }
